r Introduce configuration for jira in order to supply different jira-urls